--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "bootstrap": "^5.3.6",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
