--- a/Frontend-New/Frontend/package.json
+++ b/Frontend-New/Frontend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroicons/react": "^2.2.0",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-jwt": "^1.3.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.7"
